LPD-64028 Add bind mount for liferay routes directory

--- a/compose-recipes/liferay/service.liferay.yaml
+++ b/compose-recipes/liferay/service.liferay.yaml
@@ -32,6 +32,9 @@ services:
             -   source: ./binds/liferay/reports/
                 target: /opt/liferay/reports
                 type: bind
+            -   source: ./binds/liferay/routes
+                target: /opt/liferay/routes
+                type: bind
             -   liferay:/opt/liferay/data
 volumes:
     liferay:
