--- a/gradle.properties
+++ b/gradle.properties
@@ -81,6 +81,12 @@ lr.docker.environment.hotfix.urls=
 
 # Optional
 #
+# Password to decrypt any .7z or .zip backups in the dumps/ folder. If not set,
+# any .7z or .zip backups are assumed to be unencrypted.
+#lr.docker.environment.lxc.backup.password=
+
+# Optional
+#
 # The namespace to use for the docker-compose instance. If not set, defaults to
 # the name of the Gradle root project, which is the current folder's name if not
 # set in settings.gradle. In general, you should not need to change this.
