--- a/compose-recipes/db2/service.db2.yaml
+++ b/compose-recipes/db2/service.db2.yaml
@@ -17,7 +17,7 @@ services:
             timeout: 20s
         platform: linux/x86_64
         ports:
-            -   "50000:50000"
+            -   "${DATABASE_PORT}:50000"
         privileged: true
         volumes:
             -   dumps:/database/data/db2admin/backups
