--- a/compose-recipes/liferay/clustering.liferay.yaml
+++ b/compose-recipes/liferay/clustering.liferay.yaml
@@ -20,6 +20,6 @@ services:
             timeout: 5m
         image: ${LIFERAY_IMAGE_NAME}
         ports:
-            -   "8081-8089:8080"
-            -   "11312-11319:11311"
-            -   "8001-8009:8000"
+            -   "${LIFERAY_DEBUG_PORTS}:8000"
+            -   "${LIFERAY_PORTS}:8080"
+            -   "${LIFERAY_GOGO_SHELL_PORTS}:11311"
