--- a/compose-recipes/webserver-http/service.webserver_http.yaml
+++ b/compose-recipes/webserver-http/service.webserver_http.yaml
@@ -9,7 +9,7 @@ services:
             liferay:
                 condition: service_healthy
         ports:
-            -   "80:80"
+            -   "${WEBSERVER_HTTP_PORT}:80"
         volumes:
             -   webserver-http:/etc/nginx/conf.d
 volumes:
