LPD-64155 adds exportLiferayLogs to export the logs, reports, and routes dirs from the Liferay container

--- a/buildSrc/src/main/groovy/docker-liferay-bundle.gradle
+++ b/buildSrc/src/main/groovy/docker-liferay-bundle.gradle
@@ -304,6 +304,14 @@ tasks.register("listAdminUsers") {
 	}
 }
 
+tasks.register("exportLiferayLogs", Exec) {
+	onlyIf("using the Liferay service") {
+		config.useLiferay
+	}
+
+	executable project.file("scripts/export_liferay_logs.sh")
+}
+
 tasks.register("printBundleInfo", Exec) {
 	onlyIf("using the Liferay service") {
 		config.useLiferay
