--- a/gradle.properties
+++ b/gradle.properties
@@ -51,7 +51,7 @@ lr.docker.environment.service.enabled[webserver_https]=false
 # Optional
 #
 # Set to "false" or "0" if you want to persist volume data between restarts
-lr.docker.environment.clear.volume.data=true
+lr.docker.environment.clear.volume.data=false
 
 # Optional
 #
