--- a/ports.env
+++ b/ports.env
@@ -2,8 +2,8 @@ LIFERAY_PORTS=8080-8089
 LIFERAY_GOGO_SHELL_PORTS=11311-11319
 LIFERAY_DEBUG_PORTS=8000-8009
 LIFERAY_YOURKIT_PORTS=10001-10010
-DATABASE_PORT=54321
-ELASTICSEARCH_HTTP_PORT=9200
-ELASTICSEARCH_TRANSPORT_PORT=9300
+DATABASE_PORTS=54321
+ELASTICSEARCH_HTTP_PORTS=9200
+ELASTICSEARCH_TRANSPORT_PORTS=9300
 WEBSERVER_HTTP_PORT=80
 WEBSERVER_HTTPS_PORT=443
