--- a/gradle.properties
+++ b/gradle.properties
@@ -15,7 +15,7 @@ microsoft.translator.subscription.key=
 #
 # Sets the Liferay product version. Will also set a Liferay Docker image version.
 # See https://releases.liferay.com/releases.json for more information.
-liferay.workspace.product=dxp-2024.q3.8
+liferay.workspace.product=dxp-2024.q3.3
 
 # Optional
 #
@@ -51,7 +51,7 @@ lr.docker.environment.service.enabled[webserver_https]=false
 # Optional
 #
 # Set to "false" or "0" if you want to persist volume data between restarts
-lr.docker.environment.clear.volume.data=false
+lr.docker.environment.clear.volume.data=true
 
 # Optional
 #
