LPD-55579 If importDatabaseDumps target is called separately, data-helper container wouldn't have been created, so make sure it's created

--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,8 @@ tasks.register("exportContainerData", DockerCopyFileFromContainer) {
 
 	doFirst {
 		mkdir hostPath.get()
+
+		waitForCommand("docker compose create data-helper")
 	}
 
 	doLast {
