--- a/compose-recipes/elasticsearch/service.elasticsearch.yaml
+++ b/compose-recipes/elasticsearch/service.elasticsearch.yaml
@@ -23,8 +23,8 @@ services:
             timeout: 5s
         mem_limit: 4g
         ports:
-            -   "${ELASTICSEARCH_HTTP_PORTS}:9200"
-            -   "${ELASTICSEARCH_TRANSPORT_PORTS}:9300"
+            -   "${ELASTICSEARCH_HTTP_PORT}:9200"
+            -   "${ELASTICSEARCH_TRANSPORT_PORT}:9300"
         volumes:
             -   elasticsearch:/usr/share/elasticsearch/data/
 volumes:
